# django-add-default-value-postgresql

./: CONTRIBUTING.rst  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: pythonpackage.yml
django_add_default_value/: __init__.py  add_default_value.py
test_project/test_project/: settings.py  urls.py
test_project/tests/: __init__.py
