[project]
name = "django-add-default-value-postgresql"
version = "1.1.0"
description = "Add default field value in Django migrations for PostgreSQL"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Jeremy Carbaugh", email = "jeremy.carbaugh@xplortechnologies.com"},
    {name = "Xplor Technologies", email = "opensource@xplortechnologies.com"},
]
keywords = ["django", "migration", "default", "database backward compatibility"]
classifiers = [
	"Intended Audience :: Developers",
	"Environment :: Web Environment",
	"Framework :: Django",
	"Framework :: Django :: 4.0",
	"Framework :: Django :: 4.1",
	"Framework :: Django :: 4.2",
	"Framework :: Django :: 5.0",
	"Framework :: Django :: 5.1",
	"Framework :: Django :: 5.2",
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=4.0",
]

[project.urls]
Repository = "https://github.com/Mariana-Tek/django-add-default-value-postgresql"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "psycopg2-binary==2.9.*",
    "tox>=4.25.0",
    "tox-uv>=1.25.0",
]
