[bumpversion]
current_version = 1.0.0
commit = True
tag = True
tag_name = {new_version}

[metadata]
name = django-add-default-value
description = This django Migration Operation can be used to transfer a fields default value to the PostgreSQL schema.
long_description = file:README.md
url = https://github.com/Mariana-Tek/django-add-default-value-postgresql
author = Mariana Tek
license = Apache-2.0
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 2.2
	Framework :: Django :: 3.0
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Software Development :: Libraries :: Python Modules
keywords = 
	django
	migration
	default
	database backward compatibility

[options]
install_requires = 
	Django>=2.2,<3.1
tests_require = 
	tox
	coverage
	flake8

[bumpversion:file:setup.py]

